--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "reactstrap": "^8.4.1",
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
+    "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3"
   },
   "scripts": {
